--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ torch
 accelerate
 bitsandbytes
 transformers
-sentence_transformers
+sentence_transformers #pip install --force --no-deps git+https://github.com/UKPLab/sentence-transformers.git
 faiss_cpu
 chainlit
 duckdb
