--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,161 @@
-pypdf
-langchain
-torch
-accelerate
-bitsandbytes
-transformers
-sentence_transformers #pip install --force --no-deps git+https://github.com/UKPLab/sentence-transformers.git
-faiss_cpu
-chainlit
-duckdb
-chromadb
-langchain
+accelerate==0.22.0
+aiofiles==23.2.1
+aiohttp==3.8.5
+aiosignal==1.3.1
+anyio==3.7.1
+async-timeout==4.0.3
+asyncer==0.0.2
+atlassian-python-api==3.41.2
+attrs==23.1.0
+auth0-python==4.4.2
+backoff==2.2.1
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
+bidict==0.22.1
+bitsandbytes==0.41.1
+certifi==2023.7.22
+cffi==1.15.1
+chainlit==0.6.402
+chardet==5.2.0
+charset-normalizer==3.2.0
+chroma-hnswlib==0.7.2
+chromadb==0.4.9
+click==8.1.7
+clickhouse-connect==0.6.11
+coloredlogs==15.0.1
+cryptography==41.0.3
+ctransformers==0.2.27
+dataclasses-json==0.5.14
+datasets==2.14.5
+Deprecated==1.2.14
+dill==0.3.7
+diskcache==5.6.3
+duckdb==0.8.1
+emoji==2.8.0
+et-xmlfile==1.1.0
+faiss-cpu==1.7.4
+fastapi==0.99.1
+fastapi-socketio==0.0.10
+filelock==3.12.3
+filetype==1.2.0
+flatbuffers==23.5.26
+frozenlist==1.4.0
+fsspec==2023.6.0
+googleapis-common-protos==1.60.0
+greenlet==2.0.2
+grpcio==1.58.0
+h11==0.14.0
+hnswlib==0.7.0
+httpcore==0.17.3
+httptools==0.6.0
+httpx==0.24.1
+huggingface-hub==0.17.3
+humanfriendly==10.0
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.0.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.0.310
+langsmith==0.0.41
+Lazify==0.4.0
+llama_cpp_python==0.2.11
+lxml==4.9.3
+lz4==4.3.2
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.4
+multiprocess==0.70.15
+mypy-extensions==1.0.0
+nest-asyncio==1.5.7
+networkx==3.1
+nltk==3.8.1
+nodeenv==1.8.0
+numexpr==2.8.5
+numpy==1.26.0
+oauthlib==3.2.2
+onnxruntime==1.15.1
+openpyxl==3.1.2
+opentelemetry-api==1.19.0
+opentelemetry-exporter-otlp==1.19.0
+opentelemetry-exporter-otlp-proto-common==1.19.0
+opentelemetry-exporter-otlp-proto-grpc==1.19.0
+opentelemetry-exporter-otlp-proto-http==1.19.0
+opentelemetry-instrumentation==0.40b0
+opentelemetry-proto==1.19.0
+opentelemetry-sdk==1.19.0
+opentelemetry-semantic-conventions==0.40b0
+optimum==1.13.2
+overrides==7.4.0
+packaging==23.1
+pandas==2.1.0
+Pillow==9.5.0
+posthog==3.0.2
+prisma==0.10.0
+protobuf==4.24.3
+psutil==5.9.5
+pulsar-client==3.3.0
+py-cpuinfo==9.0.0
+pyarrow==13.0.0
+pycparser==2.21
+pydantic==1.10.12
+PyJWT==2.8.0
+pyOpenSSL==23.2.0
+pypdf==3.15.5
+PyPika==0.48.9
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-dotenv==1.0.0
+python-engineio==4.7.0
+python-graphql-client==0.4.3
+python-magic==0.4.27
+python-pptx==0.6.22
+python-socketio==5.9.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+regex==2023.8.8
+requests==2.31.0
+requests-oauthlib==1.3.1
+safetensors==0.3.3
+scikit-learn==1.3.0
+scipy==1.11.2
+sentence-transformers @ git+https://github.com/UKPLab/sentence-transformers.git@a458ce79c40fef93d5ecc66931b446ea65fdd017
+sentencepiece==0.1.99
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+SQLAlchemy==2.0.20
+starlette==0.27.0
+sympy==1.12
+syncer==2.0.3
+tabulate==0.9.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tiktoken==0.5.1
+tokenizers==0.14.1
+tomli==2.0.1
+tomlkit==0.12.1
+torch==2.0.1
+torchvision==0.15.2
+tqdm==4.66.1
+transformers @ git+https://github.com/huggingface/transformers@0b192de1f353b0e04dad4813e02e2c672de077be
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+unstructured==0.10.12
+uptrace==1.19.0
+urllib3==2.0.4
+uvicorn==0.23.2
+uvloop==0.17.0
+watchfiles==0.20.0
+websockets==11.0.3
+wrapt==1.15.0
+XlsxWriter==3.1.3
+xxhash==3.4.1
+yarl==1.9.2
+zipp==3.16.2
+zstandard==0.21.0
