--- a/requirements_docker.txt
+++ b/requirements_docker.txt
@@ -2,6 +2,7 @@ accelerate==0.22.0
 aiofiles==23.2.1
 aiohttp==3.8.5
 aiosignal==1.3.1
+altair==5.1.2
 anyio==3.7.1
 async-timeout==4.0.3
 asyncer==0.0.2
@@ -13,6 +14,8 @@ bcrypt==4.0.1
 beautifulsoup4==4.12.2
 bidict==0.22.1
 bitsandbytes==0.41.1
+blinker==1.6.3
+cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
 chainlit==0.6.402
@@ -24,9 +27,12 @@ click==8.1.7
 clickhouse-connect==0.6.11
 coloredlogs==15.0.1
 cryptography==41.0.3
-ctransformers==0.2.26
+ctransformers==0.2.27
 dataclasses-json==0.5.14
+datasets==2.14.5
 Deprecated==1.2.14
+dill==0.3.7
+diskcache==5.6.3
 duckdb==0.8.1
 emoji==2.8.0
 et-xmlfile==1.1.0
@@ -37,7 +43,9 @@ filelock==3.12.3
 filetype==1.2.0
 flatbuffers==23.5.26
 frozenlist==1.4.0
-fsspec==2023.9.0
+fsspec==2023.6.0
+gitdb==4.0.10
+GitPython==3.1.37
 googleapis-common-protos==1.60.0
 greenlet==2.0.2
 grpcio==1.58.0
@@ -46,30 +54,38 @@ hnswlib==0.7.0
 httpcore==0.17.3
 httptools==0.6.0
 httpx==0.24.1
-huggingface-hub==0.16.4
+huggingface-hub==0.17.3
 humanfriendly==10.0
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.0.1
 Jinja2==3.1.2
 joblib==1.3.2
-langchain==0.0.291
-langsmith==0.0.33
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+langchain==0.0.310
+langsmith==0.0.41
 Lazify==0.4.0
+llama_cpp_python==0.2.11
 lxml==4.9.3
 lz4==4.3.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+mdurl==0.1.2
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.4
+multiprocess==0.70.15
 mypy-extensions==1.0.0
 nest-asyncio==1.5.7
 networkx==3.1
 nltk==3.8.1
 nodeenv==1.8.0
 numexpr==2.8.5
-numpy==1.25.2
+numpy==1.26.0
 oauthlib==3.2.2
 onnxruntime==1.15.1
 openpyxl==3.1.2
@@ -82,6 +98,7 @@ opentelemetry-instrumentation==0.40b0
 opentelemetry-proto==1.19.0
 opentelemetry-sdk==1.19.0
 opentelemetry-semantic-conventions==0.40b0
+optimum==1.13.2
 overrides==7.4.0
 packaging==23.1
 pandas==2.1.0
@@ -92,8 +109,11 @@ protobuf==4.24.3
 psutil==5.9.5
 pulsar-client==3.3.0
 py-cpuinfo==9.0.0
+pyarrow==13.0.0
 pycparser==2.21
 pydantic==1.10.12
+pydeck==0.8.1b0
+Pygments==2.16.1
 PyJWT==2.8.0
 pyOpenSSL==23.2.0
 pypdf==3.15.5
@@ -108,45 +128,55 @@ python-pptx==0.6.22
 python-socketio==5.9.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+referencing==0.30.2
 regex==2023.8.8
 requests==2.31.0
 requests-oauthlib==1.3.1
+rich==13.6.0
+rpds-py==0.10.6
 safetensors==0.3.3
 scikit-learn==1.3.0
 scipy==1.11.2
 sentence-transformers @ git+https://github.com/UKPLab/sentence-transformers.git@a458ce79c40fef93d5ecc66931b446ea65fdd017
 sentencepiece==0.1.99
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.20
 starlette==0.27.0
+streamlit==1.27.2
 sympy==1.12
 syncer==2.0.3
 tabulate==0.9.0
 tenacity==8.2.3
 threadpoolctl==3.2.0
 tiktoken==0.5.1
-tokenizers==0.13.3
+tokenizers==0.14.1
+toml==0.10.2
 tomli==2.0.1
 tomlkit==0.12.1
+toolz==0.12.0
 torch==2.0.1
 torchvision==0.15.2
+tornado==6.3.3
 tqdm==4.66.1
-transformers==4.33.1
+transformers @ git+https://github.com/huggingface/transformers@0b192de1f353b0e04dad4813e02e2c672de077be
 typing-inspect==0.9.0
-typing_extensions==4.7.1
+typing_extensions==4.8.0
 tzdata==2023.3
+tzlocal==5.1
 unstructured==0.10.12
 uptrace==1.19.0
 urllib3==2.0.4
 uvicorn==0.23.2
 uvloop==0.17.0
+validators==0.22.0
 watchfiles==0.20.0
 websockets==11.0.3
 wrapt==1.15.0
 XlsxWriter==3.1.3
+xxhash==3.4.1
 yarl==1.9.2
 zipp==3.16.2
 zstandard==0.21.0
-llama_cpp_python==0.2.11
